--- a/src/componentes/acerca/css/styles.css
+++ b/src/componentes/acerca/css/styles.css
@@ -41,7 +41,7 @@
 }
 
 .text-size-banner{
-    font-size: 4.5vw;
+    font-size: 60px;
     font-family: Blackpast;
  
     text-transform: lowercase!important;
