--- a/src/componentes/acerca/css/styles.css
+++ b/src/componentes/acerca/css/styles.css
@@ -81,6 +81,7 @@ hr{
    .titu-team{
        font-family: Blackpast;
        text-transform: lowercase;
+       top: 15vw;
    }
   
   .cont-diferencia h3 {
