--- a/src/componentes/acerca/css/cards.scss
+++ b/src/componentes/acerca/css/cards.scss
@@ -12,7 +12,7 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
     padding: 0 0 0 2vw;
     display: flex;
     flex-wrap: wrap;
-    
+   
     justify-content: center;
     vertical-align: baseline;
 }
@@ -21,7 +21,7 @@ $returnEasing: cubic-bezier(0.445, 0.05, 0.55, 0.95);
 .card-wrap-personal {
     position: relative;
     top: 10%;
-    
+   
     width: 600px;
     height:100%;
     perspective: 900px;
@@ -111,8 +111,11 @@ transform: matrix3d(-20px);
   
 }
 .container-full-cards{
-    position: relative;
-    top: -200px!important;
+    position: relative;    
+    background-image: url("../../../images/team.png")!important;
+    background-position: center;
+    background-repeat: no-repeat!important;
+    background-size: cover;
 }
 .carousel-2 {    
     top: -100vw!important;     
