fix: redirection to profile

--- a/src/componentes/user/css/styles.css
+++ b/src/componentes/user/css/styles.css
@@ -2,6 +2,11 @@
     width: 50%;
 }
 
+.contenedor-profile{
+    background-color: #043361;
+    height: 100vh;
+}
+
 button.fb {
     font-family: Lucida Grande, Helvetica Neue, Helvetica, Arial, sans-serif;
     display: inline-block;
