--- a/src/componentes/acerca/css/styles.css
+++ b/src/componentes/acerca/css/styles.css
@@ -117,6 +117,8 @@ hr{
     transform: scale(1.2);
 }
 .card-img-top{overflow: hidden;}
+@media only screen and (max-width:768px){
+    .titu-team{top: 0vw!important;}
 
-
+}
 /*----------------------------------------seccion de las  cards-----------------------------------------------*/
