se realizaen las cardas para  que se ve mejor en responsivo

--- a/src/componentes/acerca/css/styles.css
+++ b/src/componentes/acerca/css/styles.css
@@ -43,7 +43,7 @@
 }
 
 .text-size-banner{
-    font-size: 90px;
+    font-size: 9vw;
     font-family: Blackpast;
  
     text-transform: lowercase!important;
