se  comienza con el cambio de los fromatos de  imagen para nueva genracion

--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ margin: 0px;
    
    background-size:cover;
    background-position:top;
-   background-image: url("./images/FONDO\ HOME.jpg")!important;
+   background-image: url("./images/FONDO\ HOME.webp")!important;
    background-repeat:no-repeat;
    
    }
