edit: some colors in buttons and wallet

--- a/src/componentes/user/scss/argon-dashboard/custom/navs/_nav-pills.scss
+++ b/src/componentes/user/scss/argon-dashboard/custom/navs/_nav-pills.scss
@@ -28,6 +28,7 @@
     .show > .nav-link {
         color: $nav-pills-link-active-color;
         background-color: $nav-pills-link-active-bg;
+        border: 1px solid white;
     }
 
     @include media-breakpoint-down(xs) {
